<resources>
    <string name="app_name">weight_tracker_kotlin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="passwordHintText">password</string>
    <string name="forgot_passwordBtnText">Forgot password?</string>
    <string name="usernameHintText">username</string>
    <string name="sign_inBtnText">Sign In</string>
    <string name="signUpUsernameTextHint">username</string>
    <string name="signUpPasswordHintText">password</string>
    <string name="sign_upBtnText">Sign Up</string>
    <string name="signUpBtnText">Sign Up</string>
    <string name="weightStepsLogoText">WeightSteps</string>
    <string name="weightStepsLogoTextBelow">Every step is progress</string>
    <string name="signInBtnText">Sign In</string>
    <string name="signUpBtnTextActivity">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>