<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_drawable"
    tools:context=".activities.IntroActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_icon" />

        <TextView
            android:id="@+id/logoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weightStepsLogoText"
            android:textColor="@color/btn_custom_font_color"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/logoTextBelow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/weightStepsLogoTextBelow"
            android:textColor="@color/custom_font_color_gray"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSignInActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/signInBtnText"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSignUpActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpBtnTextActivity"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>